src/tests/routes/users/snapshots/crates_io__tests__routes__users__email_verification__happy_path-5.snap
---
source: src/tests/routes/users/email_verification.rs
expression: app.emails_snapshot().await
---
To: user@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Please confirm your email address
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

Welcome to crates.io. Please click the link below to verify your email address:

https://crates.io/confirm/[confirm-token]

Thank you!

--
The crates.io Team
----------------------------------------

To: user@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Please confirm your email address
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

Welcome to crates.io. Please click the link below to verify your email address:

https://crates.io/confirm/[confirm-token]

Thank you!

--
The crates.io Team
